@@ -17,7 +17,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.35
+Release: 0.36
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -511,9 +511,10 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
-* Fri Jun 28 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.35
+* Fri Jun 28 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.36
 - fix: multiple relocations (#67596).
 - add --build/--program-prefix, delete libtoolize, from %%configure.
+- find-lang.sh: make sure that mo pattern matches leading '/' (#67368).
 
 * Thu Jun 27 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.33
 - use rpmdb-redhat for suggestions if/when configured (#67430).
